# deaddrop-rs

./: .gitignore  Cargo.toml  README.md  init.sql  log4rs.yaml  logs.txt  secret.txt
src/: cocoon.rs  hasher.rs  logger.rs  main.rs  new.rs  read.rs  send.rs  session.rs
src/db/: db.rs  messages.rs  mod.rs  users.rs
