[package]
name = "deaddrop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
bcrypt = "0.13.0"
rpassword = "7.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log4rs = "1.2.0"
log = "0.4.17"